--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,3 +8,5 @@ sql:
         package: "db"
         out: "./db/sqlc"
         sql_package: "database/sql"
+        emit_empty_slices: true
+        emit_interface: true
