--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: ["master"]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     name: Build image
@@ -18,7 +22,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::585008083162:user/github-ci
+          role-to-assume: arn:aws:iam::585008083162:role/github-ci
           aws-region: ap-southeast-1
 
       - name: Login to Amazon ECR
